sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:12: error: ')' expected but integer literal found.
			longueur -=1;
                                   ^